laplParser.cpp

// Generated from lapl.g4 by ANTLR 4.8


#include "laplVisitor.h"

#include "laplParser.h"


using namespace antlrcpp;
using namespace antlr4;

laplParser::laplParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

laplParser::~laplParser() {
  delete _interpreter;
}

std::string laplParser::getGrammarFileName() const {
  return "lapl.g4";
}

const std::vector<std::string>& laplParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& laplParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- Lapl_sourceContext ------------------------------------------------------------------

laplParser::Lapl_sourceContext::Lapl_sourceContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* laplParser::Lapl_sourceContext::EOF() {
  return getToken(laplParser::EOF, 0);
}

std::vector<laplParser::StatementContext *> laplParser::Lapl_sourceContext::statement() {
  return getRuleContexts<laplParser::StatementContext>();
}

laplParser::StatementContext* laplParser::Lapl_sourceContext::statement(size_t i) {
  return getRuleContext<laplParser::StatementContext>(i);
}


size_t laplParser::Lapl_sourceContext::getRuleIndex() const {
  return laplParser::RuleLapl_source;
}


antlrcpp::Any laplParser::Lapl_sourceContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<laplVisitor*>(visitor))
    return parserVisitor->visitLapl_source(this);
  else
    return visitor->visitChildren(this);
}

laplParser::Lapl_sourceContext* laplParser::lapl_source() {
  Lapl_sourceContext *_localctx = _tracker.createInstance<Lapl_sourceContext>(_ctx, getState());
  enterRule(_localctx, 0, laplParser::RuleLapl_source);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(53);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << laplParser::SEMICOLON)
      | (1ULL << laplParser::BLOCK_OPEN)
      | (1ULL << laplParser::VARIABLE)
      | (1ULL << laplParser::WHILE)
      | (1ULL << laplParser::CONTINUE)
      | (1ULL << laplParser::BREAK)
      | (1ULL << laplParser::IF)
      | (1ULL << laplParser::DISPLAY)
      | (1ULL << laplParser::EXIT)
      | (1ULL << laplParser::RETURN)
      | (1ULL << laplParser::FUNCTION)
      | (1ULL << laplParser::IDENTIFIER))) != 0)) {
      setState(50);
      statement();
      setState(55);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(56);
    match(laplParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

laplParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

laplParser::BlockContext* laplParser::StatementContext::block() {
  return getRuleContext<laplParser::BlockContext>(0);
}

laplParser::Line_statementContext* laplParser::StatementContext::line_statement() {
  return getRuleContext<laplParser::Line_statementContext>(0);
}

laplParser::Empty_lineContext* laplParser::StatementContext::empty_line() {
  return getRuleContext<laplParser::Empty_lineContext>(0);
}


size_t laplParser::StatementContext::getRuleIndex() const {
  return laplParser::RuleStatement;
}


antlrcpp::Any laplParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<laplVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

laplParser::StatementContext* laplParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, laplParser::RuleStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(61);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case laplParser::BLOCK_OPEN:
      case laplParser::WHILE:
      case laplParser::IF:
      case laplParser::FUNCTION: {
        enterOuterAlt(_localctx, 1);
        setState(58);
        block();
        break;
      }

      case laplParser::VARIABLE:
      case laplParser::CONTINUE:
      case laplParser::BREAK:
      case laplParser::DISPLAY:
      case laplParser::EXIT:
      case laplParser::RETURN:
      case laplParser::IDENTIFIER: {
        enterOuterAlt(_localctx, 2);
        setState(59);
        line_statement();
        break;
      }

      case laplParser::SEMICOLON: {
        enterOuterAlt(_localctx, 3);
        setState(60);
        empty_line();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Empty_lineContext ------------------------------------------------------------------

laplParser::Empty_lineContext::Empty_lineContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* laplParser::Empty_lineContext::SEMICOLON() {
  return getToken(laplParser::SEMICOLON, 0);
}


size_t laplParser::Empty_lineContext::getRuleIndex() const {
  return laplParser::RuleEmpty_line;
}


antlrcpp::Any laplParser::Empty_lineContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<laplVisitor*>(visitor))
    return parserVisitor->visitEmpty_line(this);
  else
    return visitor->visitChildren(this);
}

laplParser::Empty_lineContext* laplParser::empty_line() {
  Empty_lineContext *_localctx = _tracker.createInstance<Empty_lineContext>(_ctx, getState());
  enterRule(_localctx, 4, laplParser::RuleEmpty_line);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(63);
    match(laplParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

laplParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* laplParser::BlockContext::BLOCK_OPEN() {
  return getToken(laplParser::BLOCK_OPEN, 0);
}

tree::TerminalNode* laplParser::BlockContext::BLOCK_CLOSE() {
  return getToken(laplParser::BLOCK_CLOSE, 0);
}

std::vector<laplParser::StatementContext *> laplParser::BlockContext::statement() {
  return getRuleContexts<laplParser::StatementContext>();
}

laplParser::StatementContext* laplParser::BlockContext::statement(size_t i) {
  return getRuleContext<laplParser::StatementContext>(i);
}

laplParser::While_blockContext* laplParser::BlockContext::while_block() {
  return getRuleContext<laplParser::While_blockContext>(0);
}

laplParser::If_blockContext* laplParser::BlockContext::if_block() {
  return getRuleContext<laplParser::If_blockContext>(0);
}

laplParser::Function_declarationContext* laplParser::BlockContext::function_declaration() {
  return getRuleContext<laplParser::Function_declarationContext>(0);
}


size_t laplParser::BlockContext::getRuleIndex() const {
  return laplParser::RuleBlock;
}


antlrcpp::Any laplParser::BlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<laplVisitor*>(visitor))
    return parserVisitor->visitBlock(this);
  else
    return visitor->visitChildren(this);
}

laplParser::BlockContext* laplParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 6, laplParser::RuleBlock);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(76);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case laplParser::BLOCK_OPEN: {
        enterOuterAlt(_localctx, 1);
        setState(65);
        match(laplParser::BLOCK_OPEN);
        setState(69);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while ((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & ((1ULL << laplParser::SEMICOLON)
          | (1ULL << laplParser::BLOCK_OPEN)
          | (1ULL << laplParser::VARIABLE)
          | (1ULL << laplParser::WHILE)
          | (1ULL << laplParser::CONTINUE)
          | (1ULL << laplParser::BREAK)
          | (1ULL << laplParser::IF)
          | (1ULL << laplParser::DISPLAY)
          | (1ULL << laplParser::EXIT)
          | (1ULL << laplParser::RETURN)
          | (1ULL << laplParser::FUNCTION)
          | (1ULL << laplParser::IDENTIFIER))) != 0)) {
          setState(66);
          statement();
          setState(71);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        setState(72);
        match(laplParser::BLOCK_CLOSE);
        break;
      }

      case laplParser::WHILE: {
        enterOuterAlt(_localctx, 2);
        setState(73);
        while_block();
        break;
      }

      case laplParser::IF: {
        enterOuterAlt(_localctx, 3);
        setState(74);
        if_block();
        break;
      }

      case laplParser::FUNCTION: {
        enterOuterAlt(_localctx, 4);
        setState(75);
        function_declaration();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Line_statementContext ------------------------------------------------------------------

laplParser::Line_statementContext::Line_statementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* laplParser::Line_statementContext::SEMICOLON() {
  return getToken(laplParser::SEMICOLON, 0);
}

laplParser::AssignmentContext* laplParser::Line_statementContext::assignment() {
  return getRuleContext<laplParser::AssignmentContext>(0);
}

laplParser::Function_callContext* laplParser::Line_statementContext::function_call() {
  return getRuleContext<laplParser::Function_callContext>(0);
}

laplParser::Continue_statementContext* laplParser::Line_statementContext::continue_statement() {
  return getRuleContext<laplParser::Continue_statementContext>(0);
}

laplParser::Break_statementContext* laplParser::Line_statementContext::break_statement() {
  return getRuleContext<laplParser::Break_statementContext>(0);
}

laplParser::Exit_statementContext* laplParser::Line_statementContext::exit_statement() {
  return getRuleContext<laplParser::Exit_statementContext>(0);
}

laplParser::Return_statementContext* laplParser::Line_statementContext::return_statement() {
  return getRuleContext<laplParser::Return_statementContext>(0);
}

laplParser::Display_statementContext* laplParser::Line_statementContext::display_statement() {
  return getRuleContext<laplParser::Display_statementContext>(0);
}


size_t laplParser::Line_statementContext::getRuleIndex() const {
  return laplParser::RuleLine_statement;
}


antlrcpp::Any laplParser::Line_statementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<laplVisitor*>(visitor))
    return parserVisitor->visitLine_statement(this);
  else
    return visitor->visitChildren(this);
}

laplParser::Line_statementContext* laplParser::line_statement() {
  Line_statementContext *_localctx = _tracker.createInstance<Line_statementContext>(_ctx, getState());
  enterRule(_localctx, 8, laplParser::RuleLine_statement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(85);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case laplParser::VARIABLE: {
        setState(78);
        assignment();
        break;
      }

      case laplParser::IDENTIFIER: {
        setState(79);
        function_call();
        break;
      }

      case laplParser::CONTINUE: {
        setState(80);
        continue_statement();
        break;
      }

      case laplParser::BREAK: {
        setState(81);
        break_statement();
        break;
      }

      case laplParser::EXIT: {
        setState(82);
        exit_statement();
        break;
      }

      case laplParser::RETURN: {
        setState(83);
        return_statement();
        break;
      }

      case laplParser::DISPLAY: {
        setState(84);
        display_statement();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    setState(87);
    match(laplParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StringContext ------------------------------------------------------------------

laplParser::StringContext::StringContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* laplParser::StringContext::STRING() {
  return getToken(laplParser::STRING, 0);
}

tree::TerminalNode* laplParser::StringContext::STR_OP() {
  return getToken(laplParser::STR_OP, 0);
}

laplParser::Number_expressionContext* laplParser::StringContext::number_expression() {
  return getRuleContext<laplParser::Number_expressionContext>(0);
}

tree::TerminalNode* laplParser::StringContext::LINEFEED() {
  return getToken(laplParser::LINEFEED, 0);
}

tree::TerminalNode* laplParser::StringContext::CRLF() {
  return getToken(laplParser::CRLF, 0);
}


size_t laplParser::StringContext::getRuleIndex() const {
  return laplParser::RuleString;
}


antlrcpp::Any laplParser::StringContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<laplVisitor*>(visitor))
    return parserVisitor->visitString(this);
  else
    return visitor->visitChildren(this);
}

laplParser::StringContext* laplParser::string() {
  StringContext *_localctx = _tracker.createInstance<StringContext>(_ctx, getState());
  enterRule(_localctx, 10, laplParser::RuleString);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(94);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case laplParser::STRING: {
        enterOuterAlt(_localctx, 1);
        setState(89);
        match(laplParser::STRING);
        break;
      }

      case laplParser::STR_OP: {
        enterOuterAlt(_localctx, 2);
        setState(90);
        match(laplParser::STR_OP);
        setState(91);
        number_expression(0);
        break;
      }

      case laplParser::LINEFEED: {
        enterOuterAlt(_localctx, 3);
        setState(92);
        match(laplParser::LINEFEED);
        break;
      }

      case laplParser::CRLF: {
        enterOuterAlt(_localctx, 4);
        setState(93);
        match(laplParser::CRLF);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- NumberContext ------------------------------------------------------------------

laplParser::NumberContext::NumberContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* laplParser::NumberContext::NUMBER() {
  return getToken(laplParser::NUMBER, 0);
}

std::vector<tree::TerminalNode *> laplParser::NumberContext::PLUS_OP() {
  return getTokens(laplParser::PLUS_OP);
}

tree::TerminalNode* laplParser::NumberContext::PLUS_OP(size_t i) {
  return getToken(laplParser::PLUS_OP, i);
}

std::vector<tree::TerminalNode *> laplParser::NumberContext::MINUS_OP() {
  return getTokens(laplParser::MINUS_OP);
}

tree::TerminalNode* laplParser::NumberContext::MINUS_OP(size_t i) {
  return getToken(laplParser::MINUS_OP, i);
}

tree::TerminalNode* laplParser::NumberContext::NUM_OP() {
  return getToken(laplParser::NUM_OP, 0);
}

laplParser::String_expressionContext* laplParser::NumberContext::string_expression() {
  return getRuleContext<laplParser::String_expressionContext>(0);
}

tree::TerminalNode* laplParser::NumberContext::TYPE() {
  return getToken(laplParser::TYPE, 0);
}

laplParser::ValueContext* laplParser::NumberContext::value() {
  return getRuleContext<laplParser::ValueContext>(0);
}


size_t laplParser::NumberContext::getRuleIndex() const {
  return laplParser::RuleNumber;
}


antlrcpp::Any laplParser::NumberContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<laplVisitor*>(visitor))
    return parserVisitor->visitNumber(this);
  else
    return visitor->visitChildren(this);
}

laplParser::NumberContext* laplParser::number() {
  NumberContext *_localctx = _tracker.createInstance<NumberContext>(_ctx, getState());
  enterRule(_localctx, 12, laplParser::RuleNumber);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(113);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case laplParser::PLUS_OP:
      case laplParser::MINUS_OP:
      case laplParser::NUMBER: {
        enterOuterAlt(_localctx, 1);
        setState(99);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == laplParser::PLUS_OP) {
          setState(96);
          match(laplParser::PLUS_OP);
          setState(101);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        setState(105);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == laplParser::MINUS_OP) {
          setState(102);
          match(laplParser::MINUS_OP);
          setState(107);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        setState(108);
        match(laplParser::NUMBER);
        break;
      }

      case laplParser::NUM_OP: {
        enterOuterAlt(_localctx, 2);
        setState(109);
        match(laplParser::NUM_OP);
        setState(110);
        string_expression(0);
        break;
      }

      case laplParser::TYPE: {
        enterOuterAlt(_localctx, 3);
        setState(111);
        match(laplParser::TYPE);
        setState(112);
        value();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Number_expressionContext ------------------------------------------------------------------

laplParser::Number_expressionContext::Number_expressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

laplParser::NumberContext* laplParser::Number_expressionContext::number() {
  return getRuleContext<laplParser::NumberContext>(0);
}

laplParser::Function_callContext* laplParser::Number_expressionContext::function_call() {
  return getRuleContext<laplParser::Function_callContext>(0);
}

tree::TerminalNode* laplParser::Number_expressionContext::VARIABLE() {
  return getToken(laplParser::VARIABLE, 0);
}

tree::TerminalNode* laplParser::Number_expressionContext::CEIL_OP() {
  return getToken(laplParser::CEIL_OP, 0);
}

std::vector<laplParser::Number_expressionContext *> laplParser::Number_expressionContext::number_expression() {
  return getRuleContexts<laplParser::Number_expressionContext>();
}

laplParser::Number_expressionContext* laplParser::Number_expressionContext::number_expression(size_t i) {
  return getRuleContext<laplParser::Number_expressionContext>(i);
}

tree::TerminalNode* laplParser::Number_expressionContext::FLOOR_OP() {
  return getToken(laplParser::FLOOR_OP, 0);
}

tree::TerminalNode* laplParser::Number_expressionContext::LPAR() {
  return getToken(laplParser::LPAR, 0);
}

tree::TerminalNode* laplParser::Number_expressionContext::RPAR() {
  return getToken(laplParser::RPAR, 0);
}

tree::TerminalNode* laplParser::Number_expressionContext::POW_OP() {
  return getToken(laplParser::POW_OP, 0);
}

tree::TerminalNode* laplParser::Number_expressionContext::MOD_OP() {
  return getToken(laplParser::MOD_OP, 0);
}

tree::TerminalNode* laplParser::Number_expressionContext::DIV_OP() {
  return getToken(laplParser::DIV_OP, 0);
}

tree::TerminalNode* laplParser::Number_expressionContext::TIMES_OP() {
  return getToken(laplParser::TIMES_OP, 0);
}

tree::TerminalNode* laplParser::Number_expressionContext::MINUS_OP() {
  return getToken(laplParser::MINUS_OP, 0);
}

tree::TerminalNode* laplParser::Number_expressionContext::PLUS_OP() {
  return getToken(laplParser::PLUS_OP, 0);
}


size_t laplParser::Number_expressionContext::getRuleIndex() const {
  return laplParser::RuleNumber_expression;
}


antlrcpp::Any laplParser::Number_expressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<laplVisitor*>(visitor))
    return parserVisitor->visitNumber_expression(this);
  else
    return visitor->visitChildren(this);
}


laplParser::Number_expressionContext* laplParser::number_expression() {
   return number_expression(0);
}

laplParser::Number_expressionContext* laplParser::number_expression(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  laplParser::Number_expressionContext *_localctx = _tracker.createInstance<Number_expressionContext>(_ctx, parentState);
  laplParser::Number_expressionContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 14;
  enterRecursionRule(_localctx, 14, laplParser::RuleNumber_expression, precedence);

    

  auto onExit = finally([=] {
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(127);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case laplParser::PLUS_OP:
      case laplParser::MINUS_OP:
      case laplParser::NUM_OP:
      case laplParser::TYPE:
      case laplParser::NUMBER: {
        setState(116);
        number();
        break;
      }

      case laplParser::IDENTIFIER: {
        setState(117);
        function_call();
        break;
      }

      case laplParser::VARIABLE: {
        setState(118);
        match(laplParser::VARIABLE);
        break;
      }

      case laplParser::CEIL_OP: {
        setState(119);
        match(laplParser::CEIL_OP);
        setState(120);
        number_expression(9);
        break;
      }

      case laplParser::FLOOR_OP: {
        setState(121);
        match(laplParser::FLOOR_OP);
        setState(122);
        number_expression(8);
        break;
      }

      case laplParser::LPAR: {
        setState(123);
        match(laplParser::LPAR);
        setState(124);
        number_expression(0);
        setState(125);
        match(laplParser::RPAR);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    _ctx->stop = _input->LT(-1);
    setState(149);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 11, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(147);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx)) {
        case 1: {
          _localctx = _tracker.createInstance<Number_expressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleNumber_expression);
          setState(129);

          if (!(precpred(_ctx, 7))) throw FailedPredicateException(this, "precpred(_ctx, 7)");
          setState(130);
          match(laplParser::POW_OP);
          setState(131);
          number_expression(8);
          break;
        }

        case 2: {
          _localctx = _tracker.createInstance<Number_expressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleNumber_expression);
          setState(132);

          if (!(precpred(_ctx, 6))) throw FailedPredicateException(this, "precpred(_ctx, 6)");
          setState(133);
          match(laplParser::MOD_OP);
          setState(134);
          number_expression(7);
          break;
        }

        case 3: {
          _localctx = _tracker.createInstance<Number_expressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleNumber_expression);
          setState(135);

          if (!(precpred(_ctx, 5))) throw FailedPredicateException(this, "precpred(_ctx, 5)");
          setState(136);
          match(laplParser::DIV_OP);
          setState(137);
          number_expression(6);
          break;
        }

        case 4: {
          _localctx = _tracker.createInstance<Number_expressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleNumber_expression);
          setState(138);

          if (!(precpred(_ctx, 4))) throw FailedPredicateException(this, "precpred(_ctx, 4)");
          setState(139);
          match(laplParser::TIMES_OP);
          setState(140);
          number_expression(5);
          break;
        }

        case 5: {
          _localctx = _tracker.createInstance<Number_expressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleNumber_expression);
          setState(141);

          if (!(precpred(_ctx, 3))) throw FailedPredicateException(this, "precpred(_ctx, 3)");
          setState(142);
          match(laplParser::MINUS_OP);
          setState(143);
          number_expression(4);
          break;
        }
